slash-helper-macros/tests/commands/e01_not_an_enum.rs
use slash_helper_macros::Commands;

#[derive(Commands)]
struct BadCommands {}

fn main() {}
